--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: Build front-end
           command: |
-            # Your code here
+            npm install
             exit 1
       - save_cache:
           paths: [frontend/node_modules]
@@ -230,13 +230,14 @@ jobs:
 
   cloudfront-update:
     docker:
-      # Docker image here that supports AWS CLI
+      - image: amazon/aws-cli
     steps:
-      # Checkout code from git
+
+      - checkout
       - run:
           name: Install dependencies
           command: |
-            # your code here
+            #  aws cloudformation deploy  --template-file template.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}  --region us-east-1
       - run:
           name: Update cloudfront distribution
           command: |
