--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm run builde
+            npm run build
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
