test slack inegration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm run build
+            npm run builde
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -65,7 +65,7 @@ jobs:
           command: |
              cd backend
              npm install
-             npm run build 
+             npm run builde 
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -169,3 +169,4 @@ workflows:
           requires: [build-frontend]
       - scan-backend:
           requires: [build-backend]
+      - notify
