--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,13 +245,7 @@ jobs:
           command: |
             if grep -q "has been executed successfully"  ./backend/migrations_dump.txt   
             then
-              curl https://kvdb.io/NThE9CNW5wyj44nnkLyMTJ//migration_${CIRCLE_WORKFLOW_ID:0:7} \
-                -H "X-Api-Key: ${THISDB_API_KEY}" \
-                -d "1"
-            else
-              curl https://kvdb.io/NThE9CNW5wyj44nnkLyMTJ//migration_${CIRCLE_WORKFLOW_ID:0:7} \
-                -H "X-Api-Key: ${THISDB_API_KEY}" \
-                -d "0"
+              curl  https://kvdb.io/NThE9CNW5wyj44nnkLyMTJ/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1' --insecure
             fi
      # Here's where you will add some code to rollback on failurE
   
