--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ commands:
     steps:
       - run:
           name: Revert migrations
-          # Add when this will run
+          when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
             SUCCESS = 1
@@ -309,6 +309,7 @@ jobs:
           name: Deploy backend
           command: |
             cd backend
+            npm install -g typescript
             npm install
             npm run build
             cd ..
