--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -336,8 +336,10 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
+            BACKEND_IP=$(aws cloudformation describe-stacks --stack-name udapeople-backend-"${CIRCLE_WORKFLOW_ID:0:7}" --query "Stacks[0].Outputs[0].OutputValue" --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
+            echo "${BACKEND_IP}"
             if curl "${API_URL}/api/status" | grep "ok"
             then
                 return 0
