--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -24,7 +24,10 @@
 
   - name: "run server"
     become: true
-    command: pm2 start -f ./main.js
+    command: |
+      npm install
+      pm2 stop default
+      pm2 start npm -- start
     args:
       chdir: ./udapeople/dist
     environment:
