--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,27 +1,14 @@
----
-  - name: install rsync on the ansible controller
-    become: yes
-    connection: local
-    package:
-      name: 
-        - openssh
-        - rsync
-      state: present
-      
-  - name: "move files to server"
-    become: yes
-    synchronize:
-      src: /root/project/backend/dist
-      dest: ./udapeople
-      recursive: true
-
-  - name: "move node modules"
-    become: yes
-    synchronize:
-      src: /root/project/backend/node_modules
-      dest: ./udapeople
-      recursive: true
-
+  ---
+  - name: Copy files
+    become: true
+    copy:
+      src: /root/project/artifact.tar.gz
+      dest: /home/ubuntu/artifact.tar.gz
+  - name: Unarchive
+    become: true
+    shell : |
+        cd /home/ubuntu/
+        tar xvzf artifact.tar.gz -C .
   - name: "run server"
     become: true
     shell : |
