--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -34,3 +34,15 @@
     global: yes
     production: yes
     state: present
+
+- name: "extract artifact"
+  become: yes 
+  unarchive:
+    src: file/artifact.tar.gz
+    dest: .
+
+- name: "start app "
+  become: yes
+  shell:
+    pm2 stop all
+    pm2 start npm --start
