--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -316,8 +316,9 @@ jobs:
             npm run build
             cd ..
             tar -C backend -czvf artifact.tar.gz .
-            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+            mkdir -p /root/project/.circleci/ansible/roles/deploy/files/
             mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
+            ls .circleci/ansible/roles/deploy/files/
             cd .circleci/ansible/
             echo "content of inventory file"
             cat inventory.txt
