--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -38,7 +38,7 @@
 - name: "extract artifact"
   become: yes 
   unarchive:
-    src: /files/artifact.tar.gz
+    src: files/artifact.tar.gz
     dest: .
 
 - name: "start app "
